@@ -5,8 +5,11 @@ Changelog for Poi
 2.0.3 (unreleased)
 ------------------
 
+- When clicking on the suggested login button, show a popup.
+  [maurits]
+
 - Removed htmlrender.py.
-  [maurits[
+  [maurits]
 
 - Refactored the email notifications by creating a page template
   ``browser/poi_mail.pt`` and a css file ``skins/Poi/poi-email.css``
